--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "node-sass": "^4.13.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-icons": "^3.9.0",
     "react-redux": "^7.1.3",
     "react-scripts": "^3.4.0",
+    "react-toast-notifications": "^2.4.0",
     "redux": "^4.0.4",
     "redux-logger": "^3.0.6"
   },
