--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "react-scripts": "^3.4.0",
     "react-toast-notifications": "^2.4.0",
     "redux": "^4.0.4",
-    "redux-logger": "^3.0.6"
+    "redux-logger": "^3.0.6",
+    "reselect": "^4.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
